# EADA-Robotics-and-IoT-Course

./: README.md
0_course_preparation/: 0_course_preparation.md
1_class_1_exercises/: 1_class_1_exercises.md
2_class_2_exercises/: 2_class_2_exercises.md
2_class_2_exercises/src/action_msg/: CMakeLists.txt  package.xml
2_class_2_exercises/src/reach_edge_action_server/: package.xml  setup.cfg  setup.py
2_class_2_exercises/src/reach_edge_action_server/reach_edge_action_server/: reach_edge_action_server.py
2_class_2_exercises/src/turtle_follower/: package.xml  setup.py
2_class_2_exercises/src/turtle_follower/turtle_follower/: turtle_follower.py
2_class_2_exercises/src/turtle_spawner/: package.xml  setup.py
2_class_2_exercises/src/turtle_spawner/turtle_spawner/: turtle_spawner.py
2_class_2_exercises/src/turtle_tf_broadcaster/: package.xml  setup.py
2_class_2_exercises/src/turtle_tf_broadcaster/turtle_tf_broadcaster/: turtle_tf_broadcaster.py
3_class_3_exercises/: 3_class_3_exercise.md
4_class_4_exercices/: exercises_session4.md
4_class_4_exercices/robot_description/: setup.py
4_class_4_exercices/robot_description/launch/: bridge.launch.py  empty_world.launch.py  red_sphere_world.launch.py  spawn.launch.py
4_class_4_exercices/robot_description/robot_description/: move_and_imu.py  move_and_imu_odom.py  move_and_scan.py  red_object_detector.py
4_class_4_exercices/robot_description/urdf/: robot.urdf
4_class_4_exercices/robot_description/worlds/: red_sphere_world.sdf
final_project/: FINAL_PROJECT.md
